Fixed issue with activity div pushing tag links too high up.

--- a/app/assets/stylesheets/components/_photo_index.scss
+++ b/app/assets/stylesheets/components/_photo_index.scss
@@ -3,6 +3,13 @@
   -webkit-flex-flow: column;
   align-items: center;
   margin: 30px;
+  margin-top: 80px;
+}
+.user-index-photo-display {
+  display: -webkit-flex;
+  -webkit-flex-flow: column;
+  align-items: center;
+  margin: 30px;
   margin-top: 30px;
 }
 
