--- a/app/assets/stylesheets/components/_user_info.scss
+++ b/app/assets/stylesheets/components/_user_info.scss
@@ -4,6 +4,7 @@
   margin-top: 140px;
   display: flex;
   justify-content: center;
+  font-family: 'Barlow Semi Condensed';
 }
 
 .user-profile-container {
@@ -77,7 +78,7 @@
 .profile-numbers{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 20px;
   width: 300px;
   margin-left: 100px;
